<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:clickable="false"
	    android:fadingEdge="vertical"
	    android:longClickable="false"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    tools:context=".MainActivity" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:text="@string/selectCastFile"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	     <ListView
	         android:id="@+id/videoFiles"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_above="@+id/statusText"
	         android:layout_below="@+id/textView1"
	         android:layout_centerHorizontal="true"
	         android:choiceMode="singleChoice" >	
	    </ListView>
	
	    <TextView
	        android:id="@+id/statusText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/linearLayout1"
	        android:layout_centerHorizontal="true"
	        android:text=""
	        android:textSize="10sp"
	        android:visibility="invisible" />
	
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/videoFiles"
	        android:layout_alignParentBottom="true"
	        android:layout_alignRight="@+id/videoFiles"
	        android:focusable="true"
	        android:gravity="center"
	        android:paddingBottom="6dp"
	        android:paddingTop="6dp" >
	
	        <ImageView
	            android:id="@+id/action_placeholder"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:adjustViewBounds="true"
	            android:maxHeight="64dp"
	            android:maxWidth="64dp"
	            android:scaleType="centerInside"
	            android:src="@drawable/round_hourglass_icon"
	            android:title="@string/placeholder"
	            android:visibility="invisible" />
	
	        <ImageView
	            android:id="@+id/action_play"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:adjustViewBounds="true"
	            android:maxHeight="64dp"
	            android:maxWidth="64dp"
	            android:scaleType="centerInside"
	            android:src="@drawable/round_play_icon_huge"
	            android:title="@string/play"
	            android:visibility="gone" />
	
	        <ImageView
	            android:id="@+id/action_pause"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:adjustViewBounds="true"
	            android:maxHeight="64dp"
	            android:maxWidth="64dp"
	            android:scaleType="centerInside"
	            android:src="@drawable/round_pause_icon_huge"
	            android:title="@string/pause"
	            android:visibility="gone" />
	
	        <TextView
	            android:id="@+id/currentPosition"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/timeDigits"
	            android:textSize="12sp"
	            android:visibility="invisible" />
	
	        <SeekBar
	            android:id="@+id/seekBar1"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:enabled="false"
	            android:gravity="center"
	            android:visibility="visible" />
	
	        <TextView
	            android:id="@+id/totalDuration"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/timeDigits"
	            android:textSize="12sp"
	            android:visibility="invisible" />
	    </LinearLayout>
	
	</RelativeLayout>
	
	
	<!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
	
</android.support.v4.widget.DrawerLayout>